--- a/Parse-Starter-Project-1.9.3/ParseStarterProject/res/values/strings.xml
+++ b/Parse-Starter-Project-1.9.3/ParseStarterProject/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="parse_client_key">YOUR_CLIENT_KEY</string>
 
     <string name="hello">Hello World, ParseStarterProjectActivity!</string>
-    <string name="app_name">ParseStarterProject</string>
+    <string name="app_name">Favorite Heroes</string>
 </resources>
